Fix Quick Format dialog appearance on Big Sur, and tweak on <=10.15
The Quick Format dialog's shape is based on the OS window corners, and
that changed on Big Sur, which resulted in whitespace along the bottom
edge and a misaligned search results box.

The tops of the citation bubbles were also cut off (at least for me) on
Catalina.

--- a/chrome/content/zotero-platform/mac-big-sur/style.css
+++ b/chrome/content/zotero-platform/mac-big-sur/style.css
@@ -10,3 +10,12 @@ tabs > tab[visuallyselected="true"] hbox > .tab-text {
 	color: black !important;
 	text-shadow: none;
 }
+
+/* Quick Format dialog, which is based on window corners, which are different on Big Sur */
+#quick-format-dialog #zotero-icon {
+	margin-top: 2px;
+}
+
+#quick-format-iframe {
+	margin-top: 2px;
+}
